@@ -6,18 +6,16 @@ AUX avutil_aes_sha_h.patch 1299 RMD160 fe7e1d94adb228d9d64f40c499db9f9382154515 
 DIST ffmpeg-0.6.90-rc0.tar.bz2 4531418 RMD160 5be99cc0242a3d7bf64622c082f0896460e90c66 SHA1 a5c898a220a7f2220a49a37c44d273d1775d081c SHA256 2e11fecba789fb2ee52e6fefbad07a026087b4b27df517fa0a6e31816f75c9f6
 DIST ffmpeg-0.6.tar.bz2 3720372 RMD160 1ff6a8f419239a03d84f67cc954f60f73632432a SHA1 c130e3bc368251b9130ce6eafb44fe8c3993ff5c SHA256 6730baa6750f0cbffaf5f4c04f8ddcf1ebe6c651a6eeb12ae947a228de4c8120
 DIST ffmpeg-0.6_p25767.tar.bz2 4000052 RMD160 1463e744ca5f6e5535571efe19296f055ba870fb SHA1 219ecd5007eb030945556a7f279beae980a96543 SHA256 a6773c54b528d967f56811866b149ac980ad96f6c06a00e56987f7a48b4d9ff2
-EBUILD ffmpeg-0.6.90_rc0-r1.ebuild 7904 RMD160 60fc378e6efc81823b67b0bd995d91f088bc1d2d SHA1 ee06b42a3512c4e60cf003ebd0ec87125a9de343 SHA256 038d42ae9f935d13ae8a67c4eaefa2b19532a10cd7c5d9c055b1fd86412baf43
 EBUILD ffmpeg-0.6.90_rc0-r2.ebuild 7945 RMD160 2e6f2473b90d3e74ce733797908172618cdc66d0 SHA1 b5101ab094a4d28a73f6997eaf5adc78aa0075b5 SHA256 8f3c607568ec7a3525f176460e645abf6989647a8783091bff3da4a1d07e7af5
-EBUILD ffmpeg-0.6.90_rc0.ebuild 7864 RMD160 f266bdd1ab9aaace521174912e8c71215d66629c SHA1 c063d73e5fb0dd5b80c1270857418553f672e73a SHA256 1788b9714e627610ba2dff1f94fae19060633f57251bb4bd5a59e0f8d2f8e7b9
 EBUILD ffmpeg-0.6.ebuild 7782 RMD160 7dcb53dfd7bed74aa95a6813cad6c55f9fc7f062 SHA1 92d32ee520b6125b1e825bb98f3731cdfb9918c8 SHA256 ba710a4af02900b36fc1ef8d4a60bfb9a216040b3974a2394c1e8e7cec5ef52c
 EBUILD ffmpeg-0.6_p25767.ebuild 7911 RMD160 d573b7275c7d72baf655b3ceadf136d43d2fd5ee SHA1 5e6a9b938d283187120148095ff8621d4bd82ad7 SHA256 387073c421106fa9a2f14e71cdba1524d87eebe5b1fb4ef505908dafb0cd0bf8
 EBUILD ffmpeg-9999.ebuild 8253 RMD160 2efc2dee48f43b32fdebc5a78afcf1610b832124 SHA1 a8cf525ddb58e82f9e8049ca835bdf3cdf5cdfd6 SHA256 1f500e5a913cde7c541c645de695b01d6b4995908aa1e6387b822a050c766815
-MISC ChangeLog 60470 RMD160 b367ebe363dadbb01a306ba4bb68a925b8ad096b SHA1 5bb06de9876ca5f9e9db23b5d6270e557121fa18 SHA256 0b8f645f041d8b496f86eff33328d1c755896c0caea6950f5a739d692753f7e5
+MISC ChangeLog 60595 RMD160 a1c001a7b039ae42b4ca0466c12a224d3d031092 SHA1 a92f94cfb45af02640797109642b924e62478088 SHA256 4252835fd3382a1df10f473bde590ba798d83bacaf3e658729fc05d23ca63402
 MISC metadata.xml 2402 RMD160 d1226017b36de2614eb29f742fef59b9cb9b3901 SHA1 2f00b54a5f1348fe84d455f04d81988282d91ecc SHA256 8494cfb404ca14fb828175b3fde3fff5b77a925473ee1c3b2028a7060d16907a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2lm4YACgkQvFcC4BYPU0r/zQCfQHGFFY0b856iNJD4NEpty9pG
-fGIAnjQxEjBUgmlm4vcQb5g2WDIbju/f
-=hue7
+iEYEARECAAYFAk2lm/EACgkQvFcC4BYPU0oxtwCePPYt+5efV0rSBaT9FLuJO4FS
+rykAnAvWLig1I61aOdd83jnN+hnLfmqG
+=NMcq
 -----END PGP SIGNATURE-----
